Add contains text condition
Signed-off-by: stefvanschie <stefvanschiedev@gmail.com>